# rename-rs

./: Cargo.toml  README.md
src/: arg_parser.rs  logic.rs  main.rs
