[package]
name = "rename-rs"
version = "0.1.100"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
glob = "0.3.1"
owo-colors = "3.5.0"
